--- a/higia/pubspec.yaml
+++ b/higia/pubspec.yaml
@@ -14,6 +14,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  supabase_flutter: ^2.10.2
 
 flutter:
   uses-material-design: true
