add fix for pages

--- a/higia/pubspec.yaml
+++ b/higia/pubspec.yaml
@@ -25,3 +25,7 @@ flutter:
   - images/background2.png
   - images/logo2.png
   - images/sono.png
+  - images/Saude.png
+  - images/meditacao.png
+  - images/alimentacao.png
+  - images/atividade.png
