--- a/higia/pubspec.yaml
+++ b/higia/pubspec.yaml
@@ -9,12 +9,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  pedometer: ^4.0.1
+  supabase_flutter: ^2.10.2
+  permission_handler: ^12.0.1
+  get_it: ^8.1.1
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
-  supabase_flutter: ^2.10.2
+  mocktail: ^1.0.4
+  test: ^1.21.0
 
 flutter:
   uses-material-design: true
@@ -29,3 +35,4 @@ flutter:
   - images/meditacao.png
   - images/alimentacao.png
   - images/atividade.png
+  - images/passos.png
